--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "home_base.html" %}
 
 {% block title %}
-@{{ username }} on
+@{{ data['username'] }} on
 {% endblock %}
 
 {% block body %}
